# eosstrawpoll

./: .env.dev  .gitignore  .gitmodules  Cargo.toml  Makefile  bs-config.js  build.sh  build_contracts.sh  deploy.sh  docker-compose.yml  index.css  index.html  index.js  index.wasm  package.json  run.sh  start.sh  stop.sh  vendor.js  webpack.config.js
.cargo/: config
contract/: CMakeLists.txt  Cargo.toml  Makefile  config.cpp  config.hpp  contract.abi.json  docker-compose.yml  donations.hpp  eosstrawpoll.abi  eosstrawpoll.cpp  eosstrawpoll.hpp  eosstrawpoll.wasm  eosstrawpoll.wast  eosstrawpoll_tests.cpp  polls.cpp  polls.hpp  votes.cpp  votes.hpp
contract-rust/: CMakeLists.txt  Cargo.toml  Makefile  docker-compose.yml
contract-rust/docker/: build_contracts.sh  config.ini  setup_chain.sh
contract-rust/reference/: eosio.token.cpp  hello.abi  hello.cpp
contract-rust/src/: lib.rs
contract/abi/: eosstrawpoll.abi
contract/docker/: build_wasmsdk.sh  config.ini  config_telos.ini  docker-compose.yml
contract/include/: config.hpp  contract.hpp
contract/include/eosstrawpoll/: config.hpp  contract.hpp  donations.hpp  polls.hpp  types.hpp  votes.hpp
contract/src/: CMakeLists.txt  banuser.cpp  clearprofile.cpp  closepoll.cpp  config.cpp  contract.cpp  contract.hpp  createpoll.cpp  createvote.cpp  createvote.rs  destroyold.cpp  destroypoll.cpp  destroytable.cpp  destroyvote.cpp  destroyvotes.cpp  eosstrawpoll.cpp  lib.rs  moduser.cpp  openpoll.cpp  polls.cpp  setconfig.cpp  setprofile.cpp  tables.hpp  transfer.cpp  types.rs  unbanuser.cpp  unmoduser.cpp  votes.cpp
contract/tests/: CMakeLists.txt  contracts.hpp.in  dapp.system_tests.cpp  eosio.system_tester.hpp  eosstrawpoll_tester.hpp  eosstrawpoll_tests.cpp  eosstrawpoll_types.hpp  main.cpp  test_symbol.hpp
contract/unittests/: eosstrawpoll_tests.cpp
contract_cpp/: CMakeLists.txt  Makefile
contract_cpp/docker/: cert.pem  config_telos.ini  entrypoint.sh
contract_cpp/include/eosstrawpoll/: contract.hpp  oldtypes.hpp
contract_cpp/src/: clearprofile.cpp  createvote.cpp  destroyvote.cpp  destroyvotes.cpp  openpoll.cpp  setconfig.cpp  setprofile.cpp  transfer.cpp
contract_cpp/tests/: contracts.hpp.in  eosstrawpoll_tests.cpp  main.cpp
crates/contract/: Cargo.toml  contract.abi.json
crates/contract/src/: constants.rs  createpoll.rs  createvote.rs  destroypoll.rs  lib.rs  transfer.rs  types.rs
crates/website/: Cargo.toml  Makefile  bs-config.js  package-lock.json  package.json  webpack.config.js
crates/website/src/: app.rs  chains.rs  context.rs  home_page.rs  i18n.rs  lib.rs  macros.rs  main.rs  prelude.rs  route.rs  traits.rs
crates/website/src/components/: donation_form.rs  donation_list.rs  donor_list.rs  link.rs  poll_form.rs  poll_tease_list.rs  relative_time.rs
crates/website/src/eos/: agent.rs  mod.rs  service.rs  types.rs
crates/website/src/pages/: home_page.rs  poll_results_page.rs  poll_voting_page.rs  profile_page.rs
crates/website/src/router/: agent.rs  types.rs
crates/website/src/scatter/: agent.rs  service.rs  types.rs
crates/website/src/types/: actions.rs  context.rs  mod.rs
crates/website/src/views/: breadcrumbs.rs
crates/website/static/: bindgen.js  index.css  index.html  index.js
crates/website/static/css/: index.css  variables.css
crates/website/static/css/components/: app.css  poll_page.css  profile_page.css  spinner.css
docker/: Dockerfile  build_contracts.sh  config.ini  docker-compose.yml  eos.dockerfile  eosio_token.wasm  genesis.json  key.pem
docs/: 0.js  1.js  2.js  index.css  index.html  index.js  vendor.js  website.wasm
eosiolib-sys/: build.rs  wrapper.hpp
eosiolib-sys/src_bak/: action.rs  chain.rs  crypto.rs  db.rs  lib.rs  permission.rs  prelude.rs  print.rs  privileged.rs  system.rs  transaction.rs
frontend/: package.json  tsconfig.json  tslint.json
frontend/public/: index.html
frontend/src/: contract.abi.json  contract.ts  index.tsx  route.ts  routes.ts  serviceWorker.ts  styles.ts
frontend/src/components/: App.tsx  ChainsList.tsx  HomePage.tsx  NotFoundPage.tsx  Page.tsx  PollForm.tsx  Root.tsx  SettingsPage.tsx  Site.tsx  UserNav.tsx
frontend/src/machines/: pollForm.ts  rpcServer.ts  scatterMachine.ts
src/: global_config.rs  home_page.rs  lib.rs  main.rs  poll_form.rs  poll_results_page.rs  router.rs  svg.rs
src/eos/: chain.rs
src/services/: mod.rs
static/: app.css  global.css  home_page.css  index.css  index.html  lib.css  poll_form.css
website/: .env.prod  .gitignore  Cargo.toml  Makefile  package.json  webpack.config.js
website/src/: app.rs  context.rs  contract.rs  home_page.rs  lib.rs  macros.rs  main.rs  poll_form.rs  prelude.rs  route.rs  seo.rs  traits.rs  types.rs
website/src/agents/: api.rs  chain.rs  mod.rs  multi_chain.rs  router.rs  scatter.rs  tables.rs
website/src/components/: app.rs  donation_form.rs  donation_list.rs  donations_page.rs  donor_list.rs  home_page.rs  inputs.rs  link.rs  mod.rs  poll_form.rs  poll_list.rs  poll_page.rs  poll_results_page.rs  poll_tease_list.rs  poll_voting_page.rs  polls_page.rs  profile_page.rs  relative_time.rs  svg.rs
website/src/eos/: agent.rs  chain.rs  info.rs  mod.rs  service.rs  table_rows.rs  types.rs
website/src/pages/: home.rs  home_page.rs  mod.rs  new_polls.rs  poll.rs  poll_results.rs  poll_results_page.rs  poll_voting_page.rs  popular_polls.rs  profile.rs  profile_page.rs
website/src/router/: agent.rs  service.rs  types.rs
website/src/scatter/: agent.rs  service.rs  types.rs
website/src/services/: eos.rs  eosjs.rs  history.rs  mod.rs  scatter.rs
website/src/types/: actions.rs  chains.rs  context.rs  json.rs  mod.rs  route.rs  tables.rs
website/src/views/: breadcrumbs.rs  mod.rs  svg.rs
website/static/: global.css  home_page.css  index.html  poll_form.css
website/static/css/: common.css  global.css  index.css  variables.css
website/static/css/components/: app.css  home_page.css  inputs.css  new_donations.css  poll_form.css  poll_list.css  poll_page.css  poll_voting_page.css  top_donors.css
website/static/css/pages/: home.css  poll.css
(+41 files in other folders)
