[package]
name = "website"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[dependencies]
log = "0.4"
web_logger = "0.1"
stdweb = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
yew = { git = "https://github.com/DenisKolodin/yew" }
http = "0.1"
failure = "0.1"
contract = { path = "../contract", features = ["serde"] }
eosio = { path = "../../rust-eos/eosio", features = ["serde"] }
