[package]
name = "contract"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
eosio = { path = "../../../rust-eos/crates/eosio" }

[features]
default = ["contract"]
contract = ["eosio/contract"]
web = ["eosio/serde", "eosio/js-sys"]
